force-app/main/default/objects/Competitive_Request__c/Competitive_Request__c.object-meta.xml
<CustomObject>
    <description>Emerging Technology Group (ETG) - is a team with in-depth competitor knowledge, they provide support to field sales with “silver bullets” to close deals against competitor. Today field sale submit requests to the ETG team via google form; to allow scalability and SLA reporting we plan to utilize OOB Case functionalities. 

This object will be used to track the Cases created by Sales Rep and will be managed by ETG Team

Req Doc: https://docs.google.com/document/d/1CRMnSJHaR148emeuKwM9aJIeZ5NmwvYtuqbD9DC0b6o/edit?ts=5b8ef4bc</description>
    <label>Competitive Request</label>
    <nameField>
        <displayFormat>Competitive-{000}</displayFormat>
        <label>Competitive Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>