force-app/main/default/objects/Competitive_Request__c/fields/Competitive_Comments__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Comments__c</fullName>
    <description>Competitive Comments</description>
    <inlineHelpText>Competitive Comments</inlineHelpText>
    <label>Competitive Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>