force-app/main/default/objects/Competitive_Request__c/fields/Detailed_Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Request_Description__c</fullName>
    <label>Detailed Request Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>