force-app/main/default/objects/Competitive_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity</description>
    <inlineHelpText>Opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>ETG_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>