force-app/main/default/objects/Competitive_Request__c/fields/Opportunity_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Region__c</fullName>
    <formula>Opportunity__r.Owner.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Region</label>
    <type>Text</type>
</CustomField>