force-app/main/default/objects/Competitive_Request__c/fields/Opportunity_SE__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SE__c</fullName>
    <formula>Opportunity__r.Rubrik_Sales_Engineer__r.FirstName &amp; &apos; &apos; &amp; Opportunity__r.Rubrik_Sales_Engineer__r.LastName</formula>
    <label>Opportunity SE</label>
    <type>Text</type>
</CustomField>