force-app/main/default/objects/Competitive_Request__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <formula>TEXT( Opportunity__r.Primary_Competitor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Competitor</label>
    <type>Text</type>
</CustomField>