force-app/main/default/objects/Competitive_Request__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>