force-app/main/default/objects/Competitive_Request__c/listViews/Competitive_Pricing_ETG_Case.listView-meta.xml
<ListView>
    <fullName>Competitive_Pricing_ETG_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Competitive Pricing</label>
    <queue>Competitive_Pricing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>