force-app/main/default/objects/Competitive_Request__c/listViews/Competitive_Request_Queue_Competitive_Request.listView-meta.xml
<ListView>
    <fullName>Competitive_Request_Queue_Competitive_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Competitive Request Queue</label>
    <queue>Competitive_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>