force-app/main/default/objects/Competitive_Request__c/listViews/ETG_Queue_ETG_Case.listView-meta.xml
<ListView>
    <fullName>ETG_Queue_ETG_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ETG Queue</label>
    <queue>ETG_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>